[gd_scene load_steps=4 format=3 uid="uid://dvol4wrfwxtvf"]

[ext_resource type="Theme" uid="uid://dk1lq0oeybxad" path="res://ui/theme.tres" id="1_ll5vt"]
[ext_resource type="Script" path="res://ui/pause/pause.gd" id="2_agsod"]
[ext_resource type="Script" path="res://levels/menu/ui_button.gd" id="2_l7yif"]

[node name="Pause" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ll5vt")
color = Color(0, 0, 0, 0.247059)
script = ExtResource("2_agsod")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"

[node name="ContinueButton" type="Button" parent="Container"]
layout_mode = 2
text = "Continue"
flat = true
script = ExtResource("2_l7yif")

[node name="SettingsButton" type="Button" parent="Container"]
layout_mode = 2
text = "Settings"
flat = true
script = ExtResource("2_l7yif")

[node name="MainMenuButton" type="Button" parent="Container"]
layout_mode = 2
text = "Main Menu"
flat = true
script = ExtResource("2_l7yif")

[connection signal="pressed" from="Container/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Container/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Container/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
